<resources>
    <string name="app_name">SW Client</string>
    <string name="home_title">Star Wars Wiki</string>
    <string name="people">People</string>
    <string name="planets">Planets</string>
    <string name="films">Films</string>
    <string name="species">Species</string>
    <string name="vehicles">Vehicles</string>
    <string name="starships">Starships</string>
    <string name="failed_to_load">Failed to load</string>
    <string name="try_again_and_refresh_screen">Try again and refresh screen</string>
    <string name="retry">Retry</string>
    <string name="home">Home</string>
    <string name="gender">Gender</string>
    <string name="hair_color">Hair color</string>
    <string name="mass">Mass</string>
    <string name="eye_color">Eye color</string>
    <string name="skin_color">Skin Color</string>
    <string name="height">Height</string>
    <string name="population">Population</string>
    <string name="diameter">Diameter</string>
    <string name="terrain">Terrain</string>
    <string name="gravity">Gravity</string>
    <string name="rotation_period">Rotation Period</string>
    <string name="orbital_period">Orbital period</string>
    <string name="surface_water">Surface water</string>
    <string name="profile">Profile</string>
    <string name="parenthesis">(%1$s)</string>
    <string name="characters">Characters</string>
    <string name="director">Director</string>
    <string name="producer">Producer</string>
    <string name="release_date">Release Date</string>
    <string name="about">About</string>
    <string name="classification">Classification</string>
    <string name="designation">Designation</string>
    <string name="language">Language</string>
    <string name="eye_colors">Eye Colors</string>
    <string name="average_height">Average Height</string>
    <string name="average_lifespan">Average Lifespan</string>
    <string name="skin_colors">Skin Colors</string>
    <string name="hair_colors">Hair Colors</string>
    <string name="home_world">Home world</string>
    <string name="known_characters">Known Characters</string>
    <string name="class_label">Class</string>
    <string name="model">Model</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="length">Length</string>
    <string name="cost">Cost</string>
    <string name="crew">Crew</string>
    <string name="passengers">Passengers</string>
    <string name="max_atmosphering_speed">Max Atmosphering Speed</string>
    <string name="hyperdrive_rating">Hyperdrive Rating</string>
    <string name="mglt">MGLT</string>
    <string name="cargp_capacity">Cargp Capacity</string>
    <string name="consumables">Consumables</string>
    <string name="pilots">Pilots</string>
    <string name="star_wars_wiki">Star Wars Wiki</string>
</resources>